--- a/ShoesProject3/src/main/resources/application.properties
+++ b/ShoesProject3/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.jpa.hibernate.ddl-auto = update
 
 # Username and password
 
-spring.datasource.username = ARUN952
+spring.datasource.username = *****
 
-spring.datasource.password = Arun952
+spring.datasource.password = *****
 
 
 # Show or not log for each sql query\u200B
